src/themelib_sap_bluecrystal/src/sap/ui/commons/themes/sap_bluecrystal/Label.less
.sapUiLbl {
	font-family: @sapUiDesktopFontFamily;
	font-size: @sapUiDesktopFontSize;
	color: @sapUiContentLabelColor;
}

.sapUiLbLReqInd { /* to allow reuse */
	font-size: 20px;
	font-weight: bold;
	vertical-align: middle;
	color: darken(@sapUiHighlight, 5%);
}

.sapUiInverted-CTX .sapUiLbl.sapUiLblReqEnd:after,
.sapUiInverted-CTX .sapUiLbl.sapUiLblRegBeg:before {
	color: lighten(@sapUiHighlight, 18%);
}

span.sapUiLblIco { /* icon font */
	font-size: 16px;
}

/* ============================ */
/* Overwrites for Label in Form */
/* ============================ */

/* GridLayout */
.sapUiGrid td > .sapUiLbl{
	margin-top: 2px;
}

html[data-sap-ui-browser^="cr"] .sapUiGrid td > .sapUiLbl.sapUiLblReq {
	margin-top: 1px;
}

/* required symbol is now left - if indicator is already at begin, don't change it */
.sapUiInverted-CTX .sapUiLbl.sapUiLblReqEnd:before {
	color: lighten(@sapUiHighlight, 18%);
}

/* ResponsiveLayout */
/* If label is above the fields it's left aligned, if it's left of the fields it's right aligned */
.sapUiFormResLayout .sapUiRFLRow:first-child > .sapUiRFLContainer:first-child > .sapUiRFLContainerContent > .sapUiLbl{
	text-align: end !important; /* to overwrite setting on label */
	width: 100%; /* to react on touch/click on whole label cell */
	padding-right: 4px;
	box-sizing: border-box;
	-moz-box-sizing: border-box;
}

html[data-sap-ui-browser^=ie] .sapUiFormResLayout .sapUiRFLRow:first-child > .sapUiRFLContainer:first-child > .sapUiRFLContainerContent > .sapUiLbl{
	text-align: right !important; /* to overwrite setting on label */
}

html[dir=rtl][data-sap-ui-browser^=ie] .sapUiFormResLayout .sapUiRFLRow:first-child > .sapUiRFLContainer:first-child > .sapUiRFLContainerContent > .sapUiLbl{
	text-align: left !important; /* to overwrite setting on label */
}

.sapUiFormResLayout .sapUiRFLRow:first-child > .sapUiRFLContainer.sapUiRFLFullLength > .sapUiRFLContainerContent > .sapUiLbl{
	text-align: start !important; /* to overwrite setting on label */
	padding-bottom: 2px;
}

html[data-sap-ui-browser^=ie] .sapUiFormResLayout .sapUiRFLRow:first-child > .sapUiRFLContainer.sapUiRFLFullLength > .sapUiRFLContainerContent > .sapUiLbl{
	text-align: left !important; /* to overwrite setting on label */
}

html[dir=rtl][data-sap-ui-browser^=ie] .sapUiFormResLayout .sapUiRFLRow:first-child > .sapUiRFLContainer.sapUiRFLFullLength > .sapUiRFLContainerContent > .sapUiLbl{
	text-align: right !important; /* to overwrite setting on label */
}

/* ResponsiveGridLayout */
.sapUiRespGridMedia-Std-Phone.sapUiFormResGridCont > .sapUiFormElementLbl:not(.sapUiRespGridSpanS12) > .sapUiLbl,
.sapUiRespGridMedia-Std-Tablet.sapUiFormResGridCont > .sapUiFormElementLbl:not(.sapUiRespGridSpanM12) > .sapUiLbl,
.sapUiRespGridMedia-Std-Desktop.sapUiFormResGridCont > .sapUiFormElementLbl:not(.sapUiRespGridSpanL12) > .sapUiLbl,
.sapUiRespGridMedia-Std-LargeDesktop.sapUiFormResGridCont > .sapUiFormElementLbl:not(.sapUiRespGridSpanXL12) > .sapUiLbl {
	margin-top: 2px;
}

